--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -14,6 +14,7 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     && /bin/bash /tmp/library-scripts/common-debian.sh "${INSTALL_ZSH}" "${USERNAME}" "${USER_UID}" "${USER_GID}" "${UPGRADE_PACKAGES}" \
     && apt-get -y install libzip-dev \
     && apt-get install libtool
+    && apt-get install pkg-config	
     && apt-get autoremove -y && apt-get clean -y && rm -rf /var/lib/apt/lists/* /tmp/library-scripts
 
 # [Optional] Uncomment this section to install additional OS packages.
@@ -24,7 +25,7 @@ RUN apt-get update \
     libxml2-dev \
     python3-pip \
     libxt6
-    apt-get install pkg-config
+    
 
 RUN python3 -m pip install setuptools
 RUN python3 -m pip install radian
