--- a/_config.yml
+++ b/_config.yml
@@ -31,3 +31,9 @@ repository:
 html:
   use_issues_button: true
   use_repository_button: true
+
+# Add sphinx_proof extension
+sphinx:
+  extra_extensions:
+    - sphinx_proof
+    - sphinx_exercise
