--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -13,8 +13,6 @@ COPY library-scripts/*.sh /tmp/library-scripts/
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     && /bin/bash /tmp/library-scripts/common-debian.sh "${INSTALL_ZSH}" "${USERNAME}" "${USER_UID}" "${USER_GID}" "${UPGRADE_PACKAGES}" \
     && apt-get -y install libzip-dev \
-    && apt-get install libtool
-    && apt-get install pkg-config	
     && apt-get autoremove -y && apt-get clean -y && rm -rf /var/lib/apt/lists/* /tmp/library-scripts
 
 # [Optional] Uncomment this section to install additional OS packages.
@@ -26,6 +24,9 @@ RUN apt-get update \
     python3-pip \
     libxt6
     
-
 RUN python3 -m pip install setuptools
 RUN python3 -m pip install radian
+
+
+RUN apt-get -y install libtool
+RUN apt-get -y install pkg-config
