change the title in config file

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Book settings
 # Learn more at https://jupyterbook.org/customize/config.html
 
-title: 计量经济学I
+title: 计量经济学
 author: Zhentao Shi 
 # logo: logo.png
 
