modify config file

--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ author: Zhentao Shi
 execute:
 #  execute_notebooks: force
   execute_notebooks: 'off'
+  only_build_toc_files: true
 
 # Define the name of the latex output file for PDF builds
 latex:
