add real data example

--- a/_toc.yml
+++ b/_toc.yml
@@ -10,9 +10,11 @@ chapters:
 - file: lecture2-CN
 - file: lecture3-CN
 - file: lecture4-CN
+- file: real-data
 - file: lecture5-CN
 - file: lecture6-CN
 - file: lecture8-CN
 - file: lecture9-CN
 - file: lecture10-CN
 - file: lecture11-CN
+- file: bibfile_place
