--- a/_toc.yml
+++ b/_toc.yml
@@ -15,6 +15,7 @@ chapters:
 - file: lecture6-CN
 - file: lecture8-CN
 - file: lecture9-CN
+- file: real-data_2
 - file: lecture10-CN
 - file: lecture11-CN
 - file: bibfile_place
